--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 	<meta name="renderer" content="webkit">
 	<!-- No Baidu Siteapp-->
 	<meta http-equiv="Cache-Control" content="no-siteapp"/>
-	<link rel="alternate icon" type="image/png" href="i/favicon.png">
+	<link rel="shortcut icon" href="./favicon.ico">
 	<link rel="apple-touch-icon-precomposed" href="i/app-icon72x72@2x.png">
 	<meta name="apple-mobile-web-app-title" content="AMUI React"/>
 	<meta name="apple-mobile-web-app-capable" content="yes">
