--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="container" id="app"></div>
+	<div id="app"></div>
 	<script src="index.js"></script>
 </body>
 </html>
